web/styles/compose.css
/* ... */
.open_enter_sends_dialog {
    font-size: 12px;
    height: 14px;
    padding-left: 4px;
    opacity: 0.7;
    margin-bottom: 5px;
    position: relative;
    top: -2px;
    cursor: pointer;

    @media (width < $mm_min) {
        font-size: 11px;
    }

    & kbd {
        height: 16px;
        padding: 0 4px;
    }

    &:hover {
        opacity: 1;
    }

    .enter_sends_true,
    .enter_sends_false {
        display: none;
    }

    & i {
        padding-left: 3px;
        font-size: 12px;
        font-weight: 600;
    }
}

#compose-recipient {
    min-width: 0;
    display: flex;
    align-items: center;
    width: 100%;
}

.tippy-content .compose_control_buttons_container {
    .compose_gif_icon {
        bottom: 5px;
    }
}

.compose_control_buttons_container {
    margin-right: auto;
    display: flex;
    gap: 4px;
    align-items: center;

    .compose_gif_icon {
        font-size: 22px;
        height: 18px;
        line-height: 18px;
    }

    .fa-eye {
        position: relative;
        top: -0.7px;
    }

    .compose_control_menu {
        padding: 0 7px;
        font-size: 15px;
    }

    .compose_control_menu_wrapper {
        opacity: 0.7;
        padding: 0;
        margin: 0;

        &:hover {
            opacity: 1;
        }

        .compose_control_menu {
            opacity: 1;
        }
    }

    .hide-sm,
    .hide-lg {
        display: flex;
        align-items: center;
        gap: 4px;
        padding: 0;
        margin: 0;
    }

    .divider {
        color: hsl(0deg 0% 88%);
        font-size: 20px;
        margin: 0 3px;
    }

    .compose_draft_button {
        font-size: 15px;
        font-weight: 600;
        font-family: "Source Sans 3", sans-serif;
        padding: 0 5px;
        position: relative;
        top: 0.7px;
    }

    .compose_help_button {
        font-size: 20px;
        line-height: 17px;
    }
}

.compose_right_float_container {
    display: flex;
    flex-direction: row;
    white-space: nowrap;
    margin-top: 2px;
    height: 24px;

    &.disabled-compose-send-button-container {
        cursor: not-allowed;

        & button {
            pointer-events: none;
            background-color: hsl(0deg 0% 65%);
        }
    }
}

a.compose_control_button {
    padding: 5px;
    opacity: 0.7;
    color: inherit;
    text-decoration: none;
    font-size: 17px;
    text-align: center;

    &:hover {
        opacity: 1;
    }
}

/* This is used to override the
 * properties of `a.compose_control_button`
 * without using `!important`.
 */
a.compose_control_button.hide {
    display: none;
}

.drag {
    display: none;
    height: 18px;
    width: 100%;
    top: 23px;
    position: relative;
    cursor: ns-resize;
}

.preview_message_area {
    /* minus 5px padding. */
    width: calc(100% - 12px);
    padding: 5px;
    margin-top: 5px;
    /* the maximum height the textarea gets to. */
    max-height: 308px;
    /* the minimum height the textarea collapses to. */
    min-height: 42px;
    overflow: auto;

    border: 1px solid hsl(0deg 0% 67%);
    border-radius: 4px;
    background-color: hsl(0deg 0% 0% / 2%);
    cursor: not-allowed;
}

.markdown_preview_spinner {
    margin: auto;
}

#compose_recipient_selection_dropdown {
    display: flex;
    justify-content: flex-start;

    .stream_header_colorblock {
        margin: 0;
    }

    .dropdown-toggle {
        border-radius: 0 4px 4px 0 !important;
        display: flex;
        min-width: 0;
    }

    .dropdown-menu {
        /* The Bootstrap default of 160px wraps too early.
           TODO: Replace this with a max-width and natural scaling? */
        width: 200px;
        top: auto;
        left: -10px;
    }

    .dropup .dropdown-menu {
        bottom: 100%;
        margin-bottom: 17px;
    }

    #compose_select_recipient_name {
        flex-grow: 1;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    .dropdown-list-body .list_item a {
        white-space: normal;
    }

    .fa-chevron-down {
        float: right;
        padding-left: 5px;
        color: hsl(0deg 0% 58%);
        font-weight: lighter;
    }

    /* This is the "Select a stream" default message */
    .text-warning {
        color: inherit;
    }
}

#stream_message_recipient_topic {
    min-width: 0;
}

#id_compose_select_recipient {
    display: flex;
}

.dropdown-menu {
    & ul {
        list-style: none;
        margin: 0;
        background: hsl(0deg 0% 100%);
    }

    .typeahead-header {
        margin: 0;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 4px;
        border-top: 1px solid hsl(0deg 0% 0% / 20%);
        display: flex;
        align-items: center;
    }

    #typeahead-header-text {
        font-size: 12px;
    }

    &.typeahead {
        background: hsl(0deg 0% 100%);
    }
}

.compose_mobile_stream_button i,
.compose_mobile_private_button i {
    margin-right: 4px;
}

/* `^` icon located next to `Send` / `Scheduled` button which shows
   options to schedule the message. */
#send_later {
    display: flex;
    align-items: center;
    float: right;
    color: hsl(0deg 0% 100%);
    border-radius: 0 4px 4px 0;
    padding: 0;
    margin: 0;

    .zulip-icon {
        padding: 5px 9px;
    }

    .separator-line {
        background-color: hsl(0deg 0% 100% / 65%);
        height: 70%;
        width: 1px;
    }

    &:hover,
    &:focus {
        box-shadow: none;
    }
}

@media (width < $xl_min) {
    #compose-content {
        margin-right: 7px;
    }
}

@media (width < $md_min) {
    #compose-content {
        margin-right: 7px;
        margin-left: 7px;
    }
}

@media (width < $mm_min) {
    #compose-content {
        margin-right: 5px;
        margin-left: 5px;
    }
}
/* ... */

